[metadata]

name = defbench
version = 0.0.5
author = Shaun Mitchell
author_email = shaun@shitchell.com
description = benchmark (time + memory) individual python functions
keybords = benchmark, test, time, memory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shitchell/defbench
license = WTFPL
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
py_modules = defbench
python_requires = >=3.2
install_requires = memory_profiler